--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container-md-fluid px-5 main-body">
         <div class="row mt-5 px-1">
             <div class="col-sm-12">
-                <span><h1 class="m-0 font-weight-bold text-md-left text-center"><a href="#">LOGO</a></h1></span>
+                <span><h1 class="m-0 font-weight-bold text-md-left text-center"><a href="#" class="text-decoration-none text-danger">LOGO</a></h1></span>
             </div>
         </div>
         <div class="row justify-content-between">
@@ -39,13 +39,13 @@
                         </div>
                     </div>
                     <div class="row px-3">
-                        <a class="btn btn-success btn-block" href="./home-page.html">Submit</a>
+                        <a class="btn bg--seagreen text-white btn-block shadow-none" href="./home-page.html">Submit</a>
                     </div>
                 </form>
             </div>
             <div class="col-md-8">
                 <div class="row justify-content-center ">
-                    <img class="intro-bg img-fluid" src="./assets/Images/intro-bg.png" width="550px" alt="pizza-img">
+                    <img class="intro-bg img-fluid" src="./assets/Images/intro-bg.png" width="565px" alt="pizza-img">
                 </div>
             </div>
         </div>
