--- a/kitchen.html
+++ b/kitchen.html
@@ -26,9 +26,9 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse justify-content-end p-0 col-6 col-md-4" id="navbarNavDropdown">
-        <ul class="navbar-nav p-0 align-items-center">
-          <li class="nav-item dropdown">
+      <div class="collapse navbar-collapse justify-content-end col-6 col-md-4 pt-2 pt-sm-0" id="navbarNavDropdown">
+        <ul class="navbar-nav row align-items-center">
+          <li class="nav-item dropdown col-12 p-0">
                   <img src="./assets/Images/navbar-logo/profile-user.png" alt="admin-img" class="d-inline img-fluid navbar-link-logo">
                   <a class="nav-link d-inline dropdown-toggle font-weight-bold text-dark" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Admin
@@ -43,7 +43,6 @@
       </div>
   </nav>
 </div>
-
 <!--KITCHEN-->
 <div class="main pt-4 px-2 min-vh-100 pb-5 bg--lavender">
   <div class="container-sm-fluid parent--container px-2">
