--- a/reports.html
+++ b/reports.html
@@ -19,30 +19,30 @@
 <body>
 <!--NAV BAR-->
 <div class="container-fluid p-0 sticky-top">
-        <nav class="navbar navbar-expand-md navbar-light bg-white shadow-sm py-2 py-md-0 justify-content-md-around">
-            <div class="col-6 col-md-4">
-            <a class="navbar-brand text-danger font-weight-bold" href="./home-page.html">LOGO</a>
-            </div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end p-0 col-6 col-md-4" id="navbarNavDropdown">
-              <ul class="navbar-nav p-0 align-items-center">
-                <li class="nav-item dropdown">
-                        <img src="./assets/Images/navbar-logo/profile-user.png" alt="admin-img" class="d-inline img-fluid navbar-link-logo">
-                        <a class="nav-link d-inline dropdown-toggle font-weight-bold text-dark" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Admin
-                        </a>
-                  <div class="dropdown-menu p-0 mt-md-2" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item px-3 active" href="#">Dashboard</a>
-                    <a class="dropdown-item px-3" href="#">Change Password</a>
-                    <a class="dropdown-item px-3" href="./index.html">Logout</a>
-                  </div>
-                </li>
-              </ul>
-            </div>
-        </nav>
-</div>
+    <nav class="navbar navbar-expand-md navbar-light bg-white shadow-sm py-2 py-md-0 justify-content-md-around">
+        <div class="col-6 col-md-4">
+        <a class="navbar-brand text-danger font-weight-bold" href="./home-page.html">LOGO</a>
+        </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end col-6 col-md-4 pt-2 pt-sm-0" id="navbarNavDropdown">
+          <ul class="navbar-nav row align-items-center">
+            <li class="nav-item dropdown col-12 p-0">
+                    <img src="./assets/Images/navbar-logo/profile-user.png" alt="admin-img" class="d-inline img-fluid navbar-link-logo">
+                    <a class="nav-link d-inline dropdown-toggle font-weight-bold text-dark" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Admin
+                    </a>
+              <div class="dropdown-menu p-0 mt-md-2" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item px-3 active" href="#">Dashboard</a>
+                <a class="dropdown-item px-3" href="#">Change Password</a>
+                <a class="dropdown-item px-3" href="./index.html">Logout</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+    </nav>
+  </div>
 <!--POS-->
 <div class="main bg--lavender pt-3 pb-5">
     <div class="container container-sm-fluid pb-5 p-md-0">
