--- a/working-periods.html
+++ b/working-periods.html
@@ -26,9 +26,9 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse justify-content-end p-0 col-6 col-md-4" id="navbarNavDropdown">
-        <ul class="navbar-nav p-0 align-items-center">
-          <li class="nav-item dropdown">
+      <div class="collapse navbar-collapse justify-content-end col-6 col-md-4 pt-2 pt-sm-0" id="navbarNavDropdown">
+        <ul class="navbar-nav row align-items-center">
+          <li class="nav-item dropdown col-12 p-0">
                   <img src="./assets/Images/navbar-logo/profile-user.png" alt="admin-img" class="d-inline img-fluid navbar-link-logo">
                   <a class="nav-link d-inline dropdown-toggle font-weight-bold text-dark" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Admin
@@ -80,7 +80,7 @@
 <!-- TABLE -->
     <div class="container-sm-fluid mt-3 rounded bg-light">
       <div class="table-responsive vertical-scroll">
-        <table class="table table-bordered table--text">
+        <table class="table table-bordered table-text-md">
 	  			<thead>
 	  				<tr>
 	  					<th scope="col">
@@ -166,13 +166,13 @@
     </div>
     <div class="container-sm-fluid mt-4">
       <div class="row mt-2 align-items-center justify-content-between">
-        <div class="col-sm-2">
+        <div class="col-sm-4 mb-2 mb-sm-0 text-sm-left text-center">
           <button class="btn px-2 shadow-none py-1 border-secondary" type="button"><i class="fas fa-angle-double-left"></i></button>
           <button class="btn px-3 shadow-none py-1 btn-danger" type="button">1</button>
           <button class="btn px-2 shadow-none py-1 border-secondary" type="button"><i class="fas fa-angle-double-right"></i></button>
         </div>
-        <div class="col-sm-2 text-right">
-          <p class="m-0 normal--font">Showing 1 - 8 of 8</p>
+        <div class="col-sm-4 text-center text-sm-right">
+          <p class="m-0 font--normal">Showing 1 - 8 of 8</p>
         </div>
       </div>
     </div>
