--- a/order-histories.html
+++ b/order-histories.html
@@ -187,7 +187,7 @@
           <button class="btn px-2 shadow-none py-1 border-secondary" type="button"><i class="fas fa-angle-double-right"></i></button>
         </div>
         <div class="col-sm-4 text-center text-sm-right">
-          <p class="m-0 normal--font">Showing 1 - 8 of 8</p>
+          <p class="m-0 font--normal">Showing 1 - 8 of 8</p>
         </div>
       </div>
     </div>
