--- a/customers.html
+++ b/customers.html
@@ -156,13 +156,13 @@
 
     <div class="container-sm-fluid mt-4">
       <div class="row mt-2 align-items-center justify-content-between">
-        <div class="col-sm-2 mb-2 mb-sm-0">
+        <div class="col-sm-4 mb-2 mb-sm-0 text-sm-left text-center">
           <button class="btn px-2 shadow-none py-1 border-secondary" type="button"><i class="fas fa-angle-double-left"></i></button>
           <button class="btn px-3 shadow-none py-1 btn-danger" type="button">1</button>
           <button class="btn px-2 shadow-none py-1 border-secondary" type="button"><i class="fas fa-angle-double-right"></i></button>
         </div>
-        <div class="col-sm-2">
-          <p class="m-0 text-right">Showing 1 - 8 of 8</p>
+        <div class="col-sm-4 text-center text-sm-right">
+          <p class="m-0 font--normal">Showing 1 - 8 of 8</p>
         </div>
       </div>
     </div>
